# proxist

./: .gitignore  .gitmodules  Cargo.toml  README.md  container-compose.yaml
benches/kx-nano/: multiproc.sh  nano.sh
benches/kx-nano/src/: common.q  controller.q  cpu.q  cpucache.q  write.q
benches/pxd-kx-compare/: README.md  kdb_bench.q
benches/stac-m3/data/: stac-m3-kx-kdb-4.1-supermicro-micron-intel-2025-10-27.html
benches/stac-m3/scripts/: fetch_public_assets.sh
docs/: SQL.md  architecture.md  design-goals.md  hot-cold.md  proxist-table-annotations.md  roadmap.md
proxictl/: Cargo.toml
proxictl/src/: main.rs
proxist-api/: Cargo.toml
proxist-api/src/: lib.rs
proxist-ch/: Cargo.toml
proxist-ch/src/: lib.rs
proxist-core/: Cargo.toml
proxist-core/src/: api.rs  ingest.rs  lib.rs  metadata.rs  query.rs  time.rs  watermark.rs
proxist-exec/: Cargo.toml
proxist-exec/src/: lib.rs  sql.rs
proxist-mem/: Cargo.toml
proxist-mem/src/: lib.rs
proxist-metadata-sqlite/: Cargo.toml
proxist-metadata-sqlite/src/: lib.rs
proxist-wal/: Cargo.toml
proxist-wal/src/: lib.rs
proxistd/: Cargo.toml
proxistd/benches/: query_path.rs
proxistd/src/: clickhouse.rs  config.rs  hot_sql.rs  ingest.rs  lib.rs  main.rs  memstore.rs  metadata_sqlite.rs  net.rs  pgwire_server.rs  pxl.rs  scheduler.rs  wal.rs
proxistd/src/scheduler/: plan.rs
px-chd/: Cargo.toml
px-chd/src/: ch.rs  config.rs  lib.rs  main.rs  translate.rs  wal.rs
px-chd/tests/: clickhouse.rs
pxc/: Cargo.toml
pxc/benches/: compile.rs
pxc/src/: compiler.rs  main.rs
pxc/tests/: cli.rs
pxctl/: Cargo.toml
pxctl/src/: main.rs
pxd/: Cargo.toml
pxd-bench/: Cargo.toml
pxd-bench/benches/: memstore.rs  pxl.rs  wal.rs
pxd-bench/src/: lib.rs
pxd/src/: config.rs  error.rs  expr.rs  lib.rs  main.rs  memstore.rs  net.rs  pxl.rs  query.rs  storage.rs  types.rs  wal.rs
pxl-cli/: Cargo.toml
pxl-cli/benches/: compile.rs
pxl-cli/src/: compiler.rs  main.rs
pxl-cli/tests/: cli.rs
scripts/: bench.sh  bench_hot_cold_mixed.sh  bench_pxd_kx.sh  run_clickhouse_tests.sh  test.sh  test_px_chd.sh  test_sql_engine.sh
sql/: 001_create_ticks.sql  001_hot_to_persist.expected  001_hot_to_persist.sql  002_insert_ticks.sql  003_append_ticks.sql  003_hot_truncate_snapshot.expected  003_hot_truncate_snapshot.sql
tests/: README.md
tests/sql/: 001_create_ticks.sql  002_insert_ticks.expected  002_insert_ticks.sql  003_append_ticks.expected  003_append_ticks.sql  003_hot_truncate_snapshot.expected  003_hot_truncate_snapshot.sql  010_basic_ddl_insert_select.sql  011_defaults_nullable.sql  012_alter_add_column.sql  013_materialized_column.sql  014_replacing_mergetree.sql  015_collapsing_mergetree.sql  016_aggregating_mergetree.sql  017_buffer_table.sql  018_view_select.sql  019_ttl.sql  020_partitioning.sql  021_primary_key.sql  022_index_granularity.sql  023_sampling.sql  024_union.sql  025_join.sql  026_subquery.sql  027_window_functions.sql  028_array_tuple.sql  029_map_json.sql  030_enum_lowcardinality.sql  031_decimal.sql  032_ipv4_uuid.sql  033_nested.sql  034_mutations.sql  035_insert_select.sql  036_group_last.sql  037_distinct_limit.sql  038_format_json.sql  039_system_mix.sql
