[workspace]
members = [
    "proxist-core",
    "proxist-mem",
    "proxist-wal",
    "proxist-ch",
    "proxist-api",
    "proxist-metadata-sqlite",
    "proxistd",
    "pxctl",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
bytes = "1"
clap = { version = "4.4", features = ["derive"] }
axum = { version = "0.7", default-features = false, features = ["http1", "macros", "json", "tokio"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "macros", "sqlite"] }
base64 = "0.21"
tempfile = "3"
metrics = "0.21"
metrics-exporter-prometheus = "0.13"

[workspace.metadata]
description = "Proxist workspace"
