[workspace]
members = [
    "px-chd",
    "pxd",
    "pxd-bench",
    "pxl-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.75"

[workspace.metadata]
description = "Proxist workspace"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
