[package]
name = "proxist-ch"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
proxist-core = { path = "../proxist-core" }
proxist-wal = { path = "../proxist-wal" }
reqwest.workspace = true
serde_json.workspace = true
base64.workspace = true
