[package]
name = "proxist-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
serde.workspace = true
serde_bytes.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
