[package]
name = "proxist-exec"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
proxist-ch = { path = "../proxist-ch" }
proxist-core = { path = "../proxist-core" }
proxist-metadata-sqlite = { path = "../proxist-metadata-sqlite" }
sqlx = { workspace = true }

[features]
default = []
duckdb = []
postgres = []
