[package]
name = "proxist-exec"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
proxist-ch = { path = "../proxist-ch" }
proxist-core = { path = "../proxist-core" }
proxist-metadata-sqlite = { path = "../proxist-metadata-sqlite" }
sqlx = { workspace = true }
tokio-postgres = { version = "0.7", optional = true }
deadpool-postgres = { version = "0.14", optional = true }
duckdb = { version = "0.10", optional = true }
proxist-mem = { path = "../proxist-mem" }
fp-sql = { path = "../FerroPhase/crates/fp-sql" }
base64 = { workspace = true }

[features]
default = []
duckdb = ["dep:duckdb"]
postgres = ["dep:tokio-postgres", "dep:deadpool-postgres"]
