[package]
name = "proxist-wal"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode = "1"
crc32fast = "1"
proxist-core = { path = "../proxist-core" }

[dev-dependencies]
tempfile.workspace = true
