[package]
name = "proxistd"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
proxist-api = { path = "../proxist-api" }
proxist-ch = { path = "../proxist-ch" }
proxist-core = { path = "../proxist-core" }
proxist-mem = { path = "../proxist-mem" }
proxist-wal = { path = "../proxist-wal" }
proxist-metadata-sqlite = { path = "../proxist-metadata-sqlite" }
serde_bytes.workspace = true
tempfile.workspace = true
base64.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
sqlparser = "0.43"
chrono = { version = "0.4", default-features = false, features = ["std"] }
