[package]
name = "proxistd"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
proxist-core = { path = "../proxist-core" }
proxist-mem = { path = "../proxist-mem" }
proxist-wal = { path = "../proxist-wal" }
serde_bytes.workspace = true
tempfile.workspace = true
base64.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
chrono = { version = "=0.4.31", default-features = false, features = ["std"] }
fp-sql = { path = "../FerroPhase/crates/fp-sql" }
sqlx.workspace = true
duckdb = { version = "=0.10.1", optional = true }
tokio-postgres = { version = "0.7", optional = true }
reqwest.workspace = true

[features]
default = ["duckdb", "postgres"]
duckdb = ["dep:duckdb"]
postgres = ["dep:tokio-postgres"]
