[package]
name = "proxistd"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
proxist-core = { path = "../proxist-core" }
proxist-mem = { path = "../proxist-mem" }
proxist-wal = { path = "../proxist-wal" }
serde_bytes.workspace = true
tempfile.workspace = true
metrics.workspace = true
metrics-exporter-prometheus.workspace = true
chrono = { version = "=0.4.31", default-features = false, features = ["std"] }
fp-sql = { path = "../FerroPhase/crates/fp-sql" }
fp-prql = { path = "../FerroPhase/crates/fp-prql" }
sqlx.workspace = true
tokio-postgres = { version = "0.7", optional = true }
reqwest.workspace = true
pgwire = { version = "0.30.2", default-features = false, features = ["server-api"] }
futures = "0.3"
csv = "1.3"
clickhouse-rs = { version = "1.1.0-alpha.1", optional = true }

[features]
default = ["postgres"]
postgres = ["dep:tokio-postgres"]
clickhouse-native = ["dep:clickhouse-rs"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "query_path"
harness = false
