[package]
name = "pxctl"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
serde.workspace = true
tracing.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
reqwest.workspace = true
proxist-core = { path = "../proxist-core" }
