[package]
name = "pxd-bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
pxd = { path = "../pxd" }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "memstore"
harness = false

[[bench]]
name = "pxl"
harness = false

[[bench]]
name = "wal"
harness = false
