[package]
name = "pxl-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
pxd = { path = "../pxd" }
fp-core = { path = "../FerroPhase/crates/fp-core" }
fp-prql = { path = "../FerroPhase/crates/fp-prql" }
fp-sql = { path = "../FerroPhase/crates/fp-sql" }

[dev-dependencies]
